samples/_failures_safe/1761545319_b93952_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d162b569.c:143: error: expected ‘;’, ‘,’ or ‘)’ at end of input
